--- a/Andthink_Simple/andthink_library/src/main/res/values/strings.xml
+++ b/Andthink_Simple/andthink_library/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">andthink_Library</string>
+    <string name="app_name">andthink_pulltorefresh_Library</string>
 </resources>
